yaml/customerView.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customerview
  namespace: ssak8
  labels:
    app: customerview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customerview
  template:
    metadata:
      labels:
        app: customerview
    spec:
      containers:
        - name: customerview
          image: ssak8acr.azurecr.io/customerview:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: v1
kind: Service
metadata:
  name: customerview
  namespace: ssak8
  labels:
    app: customerview
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: customerview
