yaml/kakao.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kakao
  namespace: ssak8
  labels:
    app: kakao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kakao
  template:
    metadata:
      labels:
        app: kakao
    spec:
      containers:
        - name: kakao
          image: ssak8acr.azurecr.io/kakao:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: v1
kind: Service
metadata:
  name: kakao
  namespace: ssak8
  labels:
    app: kakao
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kakao
